# cpp_sandbox

./: .gitignore  .gitmodules
_template/: CMakeLists.txt
_template/src/: main.cpp
args/: CMakeLists.txt
args/src/: arguments.cpp  arguments.h  main.cpp
boost_msm/: CMakeLists.txt
boost_msm/doc/: state_machine  state_machine.md
boost_msm/example/: SimpleTutorial.cpp
boost_msm/src/: FsmAsPtr.cpp  SimpleWithFunctor2.cpp  foo.cpp  foo.h  main.cpp
c++14/: .keep
c++14/lock_guard/: CMakeLists.txt
c++14/lock_guard/src/: main.cpp
c++14/pointer/: CMakeLists.txt
c++14/pointer/src/: main.cpp
cmake_external/: CMakeLists.txt  CMakeLists.txt.in
cmake_external/src/: main.cpp
cmake_helloworld/: .clang-format  CMakeLists.txt
cmake_helloworld/src/: foo.cpp  foo.hpp  main.cpp
cpu_eater/: CMakeLists.txt
cpu_eater/src/: main.cpp
idiom/constructor/: CMakeLists.txt  cmake
idiom/constructor/src/: foo.cpp  foo.hpp  main.cpp
netlink/: CMakeLists.txt
netlink/src/: main.cpp  pid_tracker.cpp  pid_tracker.h
socket/: CMakeLists.txt
socket/client/: CMakeLists.txt
socket/client/src/: main.cpp
socket/server/: CMakeLists.txt
socket/server/src/: main.cpp  server.cpp  server.h
tasker/: .clang-format  .cproject  .project  CMakeLists.txt  cmake
tasker/src/: main.cpp  tasker.cpp  tasker.hpp
timer_observer/: CMakeLists.txt
timer_observer/src/: main.cpp  measure.h  observer.h  timer.h
